edited different section of the page

--- a/html/ABOUT.html
+++ b/html/ABOUT.html
@@ -16,7 +16,7 @@
             <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="../index.html">Home</a></li>
             <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="GALLERY.html">Gallery</a></li>
             <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="FAVORITE.html">Favorite</a></li>
-            <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="TOUR.html">Tour</a></li>
+            <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="SERVICE.html">Service</a></li>
             <li class="logo">        
                 <figure class="header__figure">
                 <img width="280px" class="header__logo" src="../images/MAINLOGO.png" aria-hidden="true" alt="logo of my page">
@@ -45,7 +45,7 @@
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="../index.html">Home</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="GALLERY.html">Gallery</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="FAVORITE.html">Favorite</a></li>
-                        <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="TOUR.html">Tour</a></li>
+                        <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="SERVICE.html">Service</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="RESUME.html">Resume</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="CONTACT.html">Contact</a></li>
                         <li class="navigation__item"><a class="navigation__link navigation__link--active fontFamily textMedium" href="ABOUT.html">About</a></li>
@@ -61,9 +61,9 @@
 
         <section class="main__item">
             <h1 class="main__header title fontFamily">ABOUT ME</h1>
-            <p class="fontFamily textMedium">I am currently studying at Addis Ababa University, I am focused more on problem-solving
+            <p class="fontFamily textMedium">I am currently studying at Addis Ababa University, and <a href="https://a2sv.org/">A2SV</a> I am focused more on problem-solving
                 and different developmental courses like web and mobile. I am a hard worker student with
-                a CGPA of 3.75. I believe in teamwork because as a team we can build more life-changing
+                a CGPA of 3.67 I believe in teamwork because as a team we can build more life-changing
                 projects. I am passionate about building system that is applicable in real life like Artificial
                 Intelligence. </p>   
         </section>
@@ -146,7 +146,7 @@
             <ul class="footer__list">
                 <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="#"> AAU </a></li>
                 <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="#"> AAiT </a></li>
-                <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="#"> A2SV </a></li>
+                <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="https://a2sv.org/">A2SV </a></li>
             </ul>
         </section>
        
