--- a/html/CONTACT.html
+++ b/html/CONTACT.html
@@ -14,7 +14,7 @@
             <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="../index.html">Home</a></li>
             <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="GALLERY.html">Gallery</a></li>
             <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="FAVORITE.html">Favorite</a></li>
-            <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="TOUR.html">Tour</a></li>
+            <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="SERVICE.html">Service</a></li>
             <li class="logo">        
                 <figure class="header__figure">
                 <img width="280px" class="header__logo" aria-hidden="true" role="presentation" src="../images/MAINLOGO.png" alt="logo of my page">
@@ -44,7 +44,7 @@
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="../index.html">Home</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="GALLERY.html">Gallery</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="FAVORITE.html">Favorite</a></li>
-                        <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="TOUR.html">Tour</a></li>
+                        <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="SERVICE.html">Service</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="RESUME.html">Resume</a></li>
                         <li class="navigation__item"><a class="navigation__link navigation__link--active fontFamily textMedium" href="CONTACT.html">Contact</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="ABOUT.html">About</a></li>
@@ -127,7 +127,7 @@
             <ul class="footer__list">
                 <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="#"> AAU </a></li>
                 <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="#"> AAiT </a></li>
-                <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="#"> A2SV </a></li>
+                <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="https://a2sv.org/">A2SV </a></li>
             </ul>
 
         </section>
