--- a/html/FAVORITE.html
+++ b/html/FAVORITE.html
@@ -15,7 +15,7 @@
             <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="../index.html">Home</a></li>
             <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="GALLERY.html">Gallery</a></li>
             <li class="navigation__item"><a class="navigation__link navigation__link--active fontFamily textMedium" href="FAVORITE.html">Favorite</a></li>
-            <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="TOUR.html">Tour</a></li>
+            <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="SERVICE.html">Service</a></li>
             <li class="logo">        
                 <figure class="header__figure">
                 <img width="280px" class="header__logo" src="../images/MAINLOGO.png" aria-hidden="true" alt="logo of my profile">
@@ -44,7 +44,7 @@
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="../index.html">Home</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="GALLERY.html">Gallery</a></li>
                         <li class="navigation__item"><a class="navigation__link navigation__link--active fontFamily textMedium" href="FAVORITE.html">Favorite</a></li>
-                        <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="TOUR.html">Tour</a></li>
+                        <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="SERVICE.html">Service</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="RESUME.html">Resume</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="CONTACT.html">Contact</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="ABOUT.html">About</a></li>
@@ -109,19 +109,17 @@
         <section class="main__items">
             <div class="main__subtext">
                 <h1 class="main__subtitle title fontFamily">Frontend frameworks</h>
-                <p class = "main__text fontFamily textMedium">  React</p>
-                <p class = "main__text fontFamily textMedium">  Angular</p>
-
+                <p class = "main__text fontFamily textMedium">  javaScript</p>
+                <p class = "main__text fontFamily textMedium">  dart</p>
             </div>
 
             <figure class="main__fig">
-                <img class="main__photo"  name="img1" src="../images/react.png" aria-hidden="true" alt="React">
-                <figcaption class="main__figcap textMedium fontFamily ">  react </figcaption>
-
+                <img class="main__photo"  name="img1" src="../images/js.jpg" aria-hidden="true" alt="React">
+                <figcaption class="main__figcap textMedium fontFamily ">  javaScript </figcaption>
             </figure>
             <figure class="main__fig">
-                <img class="main__photo"  name="img1" src="../images/angular.jpg" aria-hidden="true" alt="Angular">
-                <figcaption class="main__figcap textMedium fontFamily ">|     angular </figcaption>
+                <img class="main__photo"  name="img1" src="../images/dart.jpg" aria-hidden="true" alt="Angular">
+                <figcaption class="main__figcap textMedium fontFamily ">|     dart </figcaption>
 
             </figure>
         </section>
@@ -159,7 +157,7 @@
             <ul class="footer__list">
                 <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="#"> AAU </a></li>
                 <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="#"> AAiT </a></li>
-                <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="#"> A2SV </a></li>
+                <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="https://a2sv.org/">A2SV </a></li>
             </ul>
 
         </section>
