--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li class="navigation__item "><a class="navigation__link navigation__link--active fontFamily textMedium" href="index.html">Home</a></li>
             <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="html/GALLERY.html">Gallery</a></li>
             <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="html/FAVORITE.html">Favorite</a></li>
-            <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="html/TOUR.html">Tour</a></li>
+            <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="html/SERVICE.html">Service</a></li>
             <li class="logo">        
                 <figure class="header__figure">
                 <img width="280px" class="header__logo" role="presentation" src="images/MAINLOGO.png" aria-hidden="true" alt="logo Of My Page">
@@ -48,7 +48,7 @@
                         <li class="navigation__item"><a class="navigation__link navigation__link--active fontFamily textMedium" href="index.html">Home</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="html/GALLERY.html">Gallery</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="html/FAVORITE.html">Favorite</a></li>
-                        <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="html/TOUR.html">Tour</a></li>
+                        <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="html/SERVICE.html">Service</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="html/RESUME.html">Resume</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="html/CONTACT.html">Contact</a></li>
                         <li class="navigation__item"><a class="navigation__link fontFamily textMedium" href="html/ABOUT.html">About</a></li>
@@ -115,7 +115,7 @@
             <ul class="footer__list">
                 <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="#"> AAU </a></li>
                 <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="#"> AAiT </a></li>
-                <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="#"> A2SV </a></li>
+                <li class="footer__listitem fontFamily textMedium"><a class="footer__link fontFamily textMedium" href="https://a2sv.org/"> A2SV </a></li>
             </ul>
 
         </section>
