add profile image

--- a/html/ABOUT.html
+++ b/html/ABOUT.html
@@ -53,7 +53,7 @@
     <aside class="aside">
       <img
         class="aside__image"
-        src="../images/tamirat.png"
+        src="../images/profile.png"
         alt="photo of tamirat dereje"
         aria-hidden="true"
       />
