--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </nav>
     <img
       class="image"
-      src="images/tamirat.png"
+      src="images/profile.png"
       alt="photo of tamirat"
       aria-hidden="true"
     />
